Procesadores de Lenguaje/analizador-sintactico/entrega-2-main/analizador-javacc/src/asint/AnalizadorSintacticoTiny.java
/* AnalizadorSintacticoTiny.java */
/* Generated By:JavaCC: Do not edit this line. AnalizadorSintacticoTiny.java */
package asint;

public class AnalizadorSintacticoTiny implements AnalizadorSintacticoTinyConstants {
    protected void newToken(Token t) {}

// Sintaxis
  final public   void analiza() throws ParseException {
    trace_call("analiza");
    try {

      bloque();
      jj_consume_token(0);
    } finally {
      trace_return("analiza");
    }
}

  final public void bloque() throws ParseException {
    trace_call("bloque");
    try {

      jj_consume_token(35);
      declaraciones();
      instrucciones();
      jj_consume_token(36);
    } finally {
      trace_return("bloque");
    }
}

// Sintaxis > Declaraciones
  final public   void declaraciones() throws ParseException {
    trace_call("declaraciones");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case STRUCT:
      case TYPE:
      case PROC:
      case IDENTIFICADOR:
      case 45:{
        declaracion();
        r_declaraciones();
        jj_consume_token(37);
        break;
        }
      default:
        jj_la1[0] = jj_gen;

      }
    } finally {
      trace_return("declaraciones");
    }
}

  final public void r_declaraciones() throws ParseException {
    trace_call("r_declaraciones");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 38:{
        jj_consume_token(38);
        declaracion();
        r_declaraciones();
        break;
        }
      default:
        jj_la1[1] = jj_gen;

      }
    } finally {
      trace_return("r_declaraciones");
    }
}

// Sintaxis > Declaraciones > Declaración
  final public   void declaracion() throws ParseException {
    trace_call("declaracion");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case STRUCT:
      case IDENTIFICADOR:
      case 45:{
        variable();
        break;
        }
      case PROC:{
        procedimiento();
        break;
        }
      case TYPE:{
        definicion();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("declaracion");
    }
}

  final public void variable() throws ParseException {
    trace_call("variable");
    try {

      tipo();
      jj_consume_token(IDENTIFICADOR);
    } finally {
      trace_return("variable");
    }
}

  final public void procedimiento() throws ParseException {
    trace_call("procedimiento");
    try {

      jj_consume_token(PROC);
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(39);
      proc_parametros();
      jj_consume_token(40);
      bloque();
    } finally {
      trace_return("procedimiento");
    }
}

  final public void definicion() throws ParseException {
    trace_call("definicion");
    try {

      jj_consume_token(TYPE);
      tipo();
      jj_consume_token(IDENTIFICADOR);
    } finally {
      trace_return("definicion");
    }
}

  final public void proc_parametros() throws ParseException {
    trace_call("proc_parametros");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case STRUCT:
      case IDENTIFICADOR:
      case 45:{
        proc_parametro();
        r_proc_parametros();
        break;
        }
      default:
        jj_la1[3] = jj_gen;

      }
    } finally {
      trace_return("proc_parametros");
    }
}

  final public void r_proc_parametros() throws ParseException {
    trace_call("r_proc_parametros");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 41:{
        jj_consume_token(41);
        proc_parametro();
        r_proc_parametros();
        break;
        }
      default:
        jj_la1[4] = jj_gen;

      }
    } finally {
      trace_return("r_proc_parametros");
    }
}

  final public void proc_parametro() throws ParseException {
    trace_call("proc_parametro");
    try {

      tipo();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 42:{
        jj_consume_token(42);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(IDENTIFICADOR);
    } finally {
      trace_return("proc_parametro");
    }
}

// Sintaxis > Declaraciones > Tipo
  final public   void tipo() throws ParseException {
    trace_call("tipo");
    try {

      tipo_1();
      r_tipo();
    } finally {
      trace_return("tipo");
    }
}

  final public void r_tipo() throws ParseException {
    trace_call("r_tipo");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 43:{
        jj_consume_token(43);
        jj_consume_token(LITERAL_ENTERO);
        jj_consume_token(44);
        r_tipo();
        break;
        }
      default:
        jj_la1[6] = jj_gen;

      }
    } finally {
      trace_return("r_tipo");
    }
}

  final public void tipo_1() throws ParseException {
    trace_call("tipo_1");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOL:
      case STRING:
      case STRUCT:
      case IDENTIFICADOR:{
        tipo_2();
        break;
        }
      case 45:{
        jj_consume_token(45);
        tipo_1();
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("tipo_1");
    }
}

  final public void tipo_2() throws ParseException {
    trace_call("tipo_2");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STRUCT:{
        jj_consume_token(STRUCT);
        jj_consume_token(35);
        struct_bloque();
        jj_consume_token(36);
        break;
        }
      case INT:{
        jj_consume_token(INT);
        break;
        }
      case REAL:{
        jj_consume_token(REAL);
        break;
        }
      case BOOL:{
        jj_consume_token(BOOL);
        break;
        }
      case STRING:{
        jj_consume_token(STRING);
        break;
        }
      case IDENTIFICADOR:{
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("tipo_2");
    }
}

  final public void struct_bloque() throws ParseException {
    trace_call("struct_bloque");
    try {

      variable();
      r_struct_bloque();
    } finally {
      trace_return("struct_bloque");
    }
}

  final public void r_struct_bloque() throws ParseException {
    trace_call("r_struct_bloque");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 41:{
        jj_consume_token(41);
        variable();
        r_struct_bloque();
        break;
        }
      default:
        jj_la1[9] = jj_gen;

      }
    } finally {
      trace_return("r_struct_bloque");
    }
}

// Sintaxis > Instrucciones
  final public   void instrucciones() throws ParseException {
    trace_call("instrucciones");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case NEW:
      case DELETE:
      case READ:
      case WRITE:
      case NL:
      case CALL:
      case 35:
      case 46:{
        instruccion();
        r_lista_instrucciones();
        break;
        }
      default:
        jj_la1[10] = jj_gen;

      }
    } finally {
      trace_return("instrucciones");
    }
}

  final public void r_lista_instrucciones() throws ParseException {
    trace_call("r_lista_instrucciones");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 38:{
        jj_consume_token(38);
        instruccion();
        r_lista_instrucciones();
        break;
        }
      default:
        jj_la1[11] = jj_gen;

      }
    } finally {
      trace_return("r_lista_instrucciones");
    }
}

// Sintaxis > Instrucciones > Instrucción
  final public   void instruccion() throws ParseException {
    trace_call("instruccion");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 46:{
        jj_consume_token(46);
        e0();
        break;
        }
      case IF:{
        jj_consume_token(IF);
        e0();
        bloque();
        sino();
        break;
        }
      case WHILE:{
        jj_consume_token(WHILE);
        e0();
        bloque();
        break;
        }
      case NEW:
      case DELETE:
      case READ:
      case WRITE:{
        manipular();
        e0();
        break;
        }
      case CALL:{
        jj_consume_token(CALL);
        jj_consume_token(IDENTIFICADOR);
        jj_consume_token(39);
        call_paramentros();
        jj_consume_token(40);
        break;
        }
      case NL:{
        jj_consume_token(NL);
        break;
        }
      case 35:{
        bloque();
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("instruccion");
    }
}

  final public void sino() throws ParseException {
    trace_call("sino");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        instruccion();
        break;
        }
      default:
        jj_la1[13] = jj_gen;

      }
    } finally {
      trace_return("sino");
    }
}

  final public void manipular() throws ParseException {
    trace_call("manipular");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case READ:{
        jj_consume_token(READ);
        break;
        }
      case WRITE:{
        jj_consume_token(WRITE);
        break;
        }
      case NEW:{
        jj_consume_token(NEW);
        break;
        }
      case DELETE:{
        jj_consume_token(DELETE);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("manipular");
    }
}

  final public void call_paramentros() throws ParseException {
    trace_call("call_paramentros");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NOT:
      case TRUE:
      case FALSE:
      case NULL:
      case IDENTIFICADOR:
      case LITERAL_ENTERO:
      case LITERAL_REAL:
      case LITERAL_CADENA:
      case 39:
      case 47:{
        e0();
        r_call_parametros();
        break;
        }
      default:
        jj_la1[15] = jj_gen;

      }
    } finally {
      trace_return("call_paramentros");
    }
}

  final public void r_call_parametros() throws ParseException {
    trace_call("r_call_parametros");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 41:{
        jj_consume_token(41);
        e0();
        r_call_parametros();
        break;
        }
      default:
        jj_la1[16] = jj_gen;

      }
    } finally {
      trace_return("r_call_parametros");
    }
}

// Sintaxis > Instrucciones > Expresión
  final public   void e0() throws ParseException {
    trace_call("e0");
    try {

      e1();
      r_e0();
    } finally {
      trace_return("e0");
    }
}

  final public void r_e0() throws ParseException {
    trace_call("r_e0");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 49:{
        op0();
        e1();
        r_e0();
        break;
        }
      default:
        jj_la1[17] = jj_gen;

      }
    } finally {
      trace_return("r_e0");
    }
}

  final public void e1() throws ParseException {
    trace_call("e1");
    try {

      e2();
      r_e1();
    } finally {
      trace_return("e1");
    }
}

  final public void r_e1() throws ParseException {
    trace_call("r_e1");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 50:
      case 51:
      case 52:
      case 53:
      case 54:
      case 55:{
        op1();
        e2();
        r_e1();
        break;
        }
      default:
        jj_la1[18] = jj_gen;

      }
    } finally {
      trace_return("r_e1");
    }
}

  final public void e2() throws ParseException {
    trace_call("e2");
    try {

      e3();
      r1_e2();
      r2_e2();
    } finally {
      trace_return("e2");
    }
}

  final public void r1_e2() throws ParseException {
    trace_call("r1_e2");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 47:{
        jj_consume_token(47);
        e3();
        break;
        }
      default:
        jj_la1[19] = jj_gen;

      }
    } finally {
      trace_return("r1_e2");
    }
}

  final public void r2_e2() throws ParseException {
    trace_call("r2_e2");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 48:{
        jj_consume_token(48);
        e3();
        r2_e2();
        break;
        }
      default:
        jj_la1[20] = jj_gen;

      }
    } finally {
      trace_return("r2_e2");
    }
}

  final public void e3() throws ParseException {
    trace_call("e3");
    try {

      e4();
      r_e3();
    } finally {
      trace_return("e3");
    }
}

  final public void r_e3() throws ParseException {
    trace_call("r_e3");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        jj_consume_token(AND);
        e4();
        r_e3();
        break;
        }
      case OR:{
        jj_consume_token(OR);
        e4();
        break;
        }
      default:
        jj_la1[21] = jj_gen;

      }
    } finally {
      trace_return("r_e3");
    }
}

  final public void e4() throws ParseException {
    trace_call("e4");
    try {

      e5();
      r_e4();
    } finally {
      trace_return("e4");
    }
}

  final public void r_e4() throws ParseException {
    trace_call("r_e4");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 56:
      case 57:
      case 58:{
        op4();
        e5();
        r_e4();
        break;
        }
      default:
        jj_la1[22] = jj_gen;

      }
    } finally {
      trace_return("r_e4");
    }
}

  final public void e5() throws ParseException {
    trace_call("e5");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NOT:
      case 47:{
        op5();
        e5();
        break;
        }
      case TRUE:
      case FALSE:
      case NULL:
      case IDENTIFICADOR:
      case LITERAL_ENTERO:
      case LITERAL_REAL:
      case LITERAL_CADENA:
      case 39:{
        e6();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("e5");
    }
}

  final public void e6() throws ParseException {
    trace_call("e6");
    try {

      e7();
      r_e6();
    } finally {
      trace_return("e6");
    }
}

  final public void r_e6() throws ParseException {
    trace_call("r_e6");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 43:
      case 45:
      case 59:{
        op6();
        r_e6();
        break;
        }
      default:
        jj_la1[24] = jj_gen;

      }
    } finally {
      trace_return("r_e6");
    }
}

  final public void e7() throws ParseException {
    trace_call("e7");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LITERAL_ENTERO:{
        jj_consume_token(LITERAL_ENTERO);
        break;
        }
      case LITERAL_REAL:{
        jj_consume_token(LITERAL_REAL);
        break;
        }
      case LITERAL_CADENA:{
        jj_consume_token(LITERAL_CADENA);
        break;
        }
      case TRUE:{
        jj_consume_token(TRUE);
        break;
        }
      case FALSE:{
        jj_consume_token(FALSE);
        break;
        }
      case IDENTIFICADOR:{
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      case NULL:{
        jj_consume_token(NULL);
        break;
        }
      case 39:{
        e8();
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("e7");
    }
}

  final public void e8() throws ParseException {
    trace_call("e8");
    try {

      jj_consume_token(39);
      e0();
      jj_consume_token(40);
    } finally {
      trace_return("e8");
    }
}

// Sintaxis > Instrucciones > Operadores
  final public   void op0() throws ParseException {
    trace_call("op0");
    try {

      jj_consume_token(49);
    } finally {
      trace_return("op0");
    }
}

  final public void op1() throws ParseException {
    trace_call("op1");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 50:{
        jj_consume_token(50);
        break;
        }
      case 51:{
        jj_consume_token(51);
        break;
        }
      case 52:{
        jj_consume_token(52);
        break;
        }
      case 53:{
        jj_consume_token(53);
        break;
        }
      case 54:{
        jj_consume_token(54);
        break;
        }
      case 55:{
        jj_consume_token(55);
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("op1");
    }
}

  final public void op4() throws ParseException {
    trace_call("op4");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 56:{
        jj_consume_token(56);
        break;
        }
      case 57:{
        jj_consume_token(57);
        break;
        }
      case 58:{
        jj_consume_token(58);
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("op4");
    }
}

  final public void op5() throws ParseException {
    trace_call("op5");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 47:{
        jj_consume_token(47);
        break;
        }
      case NOT:{
        jj_consume_token(NOT);
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("op5");
    }
}

  final public void op6() throws ParseException {
    trace_call("op6");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 43:{
        jj_consume_token(43);
        e0();
        jj_consume_token(44);
        break;
        }
      case 59:{
        jj_consume_token(59);
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      case 45:{
        jj_consume_token(45);
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("op6");
    }
}

  /** Generated Token Manager. */
  public AnalizadorSintacticoTinyTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[30];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x34100780,0x0,0x34100780,0x20100780,0x0,0x0,0x0,0x20100780,0x20100780,0x0,0xbea0000,0x0,0xbea0000,0x40000,0x1e00000,0xe001e000,0x0,0x0,0x0,0x0,0x0,0x1800,0x0,0xe001e000,0x0,0xe001c000,0x0,0x0,0x2000,0x0,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x2000,0x40,0x2000,0x2000,0x200,0x400,0x800,0x2000,0x0,0x200,0x4008,0x40,0x4008,0x0,0x0,0x8081,0x200,0x20000,0xfc0000,0x8000,0x10000,0x0,0x7000000,0x8081,0x8002800,0x81,0xfc0000,0x7000000,0x8000,0x8002800,};
	}

  {
      enable_tracing();
  }
  /** Constructor with InputStream. */
  public AnalizadorSintacticoTiny(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public AnalizadorSintacticoTiny(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new AnalizadorSintacticoTinyTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public AnalizadorSintacticoTiny(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new AnalizadorSintacticoTinyTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new AnalizadorSintacticoTinyTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public AnalizadorSintacticoTiny(AnalizadorSintacticoTinyTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(AnalizadorSintacticoTinyTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 30; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   trace_token(token, "");
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	   trace_token(token, " (in getNextToken)");
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[60];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 30; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 60; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  private int trace_indent = 0;
/** Enable tracing. */
  final public void enable_tracing() {
	 trace_enabled = true;
  }

/** Disable tracing. */
  final public void disable_tracing() {
	 trace_enabled = false;
  }

  protected void trace_call(String s) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.println("Call:	" + s);
	 }
	 trace_indent = trace_indent + 2;
  }

  protected void trace_return(String s) {
	 trace_indent = trace_indent - 2;
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.println("Return: " + s);
	 }
  }

  protected void trace_token(Token t, String where) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.print("Consumed token: <" + tokenImage[t.kind]);
	   if (t.kind != 0 && !tokenImage[t.kind].equals("\"" + t.image + "\"")) {
		 System.out.print(": \"" + TokenMgrError.addEscapes(t.image) + "\"");
	   }
	   System.out.println(" at line " + t.beginLine + " column " + t.beginColumn + ">" + where);
	 }
  }

  protected void trace_scan(Token t1, int t2) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.print("Visited token: <" + tokenImage[t1.kind]);
	   if (t1.kind != 0 && !tokenImage[t1.kind].equals("\"" + t1.image + "\"")) {
		 System.out.print(": \"" + TokenMgrError.addEscapes(t1.image) + "\"");
	   }
	   System.out.println(" at line " + t1.beginLine + " column " + t1.beginColumn + ">; Expected token: <" + tokenImage[t2] + ">");
	 }
  }

}
